crates/parsing/tests/snapshots/grammar_tests__type-application.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: f @a @b 1 2
Start { kind: ApplicationExpression }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: QualifiedPrefix }
      Finish
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: TypeArgument }
      Token { kind: At }
      Start { kind: VariableType }
        Token { kind: Lower }
      Finish
    Finish
    Start { kind: TypeArgument }
      Token { kind: At }
      Start { kind: VariableType }
        Token { kind: Lower }
      Finish
    Finish
    Start { kind: TermArgument }
      Start { kind: LiteralExpression }
        Token { kind: LiteralInteger }
      Finish
    Finish
    Start { kind: TermArgument }
      Start { kind: LiteralExpression }
        Token { kind: LiteralInteger }
      Finish
    Finish
  Finish
Finish

