crates/parsing/tests/snapshots/grammar_tests__typed-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 1 :: Type
Start { kind: TypedBinder }
  Start { kind: LiteralBinder }
    Token { kind: LiteralInteger }
  Finish
  Token { kind: Colon2 }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
Finish

