crates/parsing/tests/snapshots/grammar_tests__typed-expression.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 1 :: Int
Start { kind: TypedExpression }
  Start { kind: Sentinel }
  Start { kind: Sentinel }
  Start { kind: LiteralExpression }
    Token { kind: LiteralInteger }
  Finish
  Token { kind: Colon2 }
  Start { kind: ConstructorType }
    Token { kind: Upper }
  Finish
Finish

