crates/parsing/tests/snapshots/grammar_tests__unqualified-operator-name.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: (+) 1 2
Start { kind: ApplicationExpression }
  Start { kind: OperatorNameExpression }
    Start { kind: Wrapped }
      Token { kind: LeftParenthesis }
      Start { kind: NameRef }
        Token { kind: Operator }
      Finish
      Token { kind: RightParenthesis }
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: TermArgument }
      Start { kind: LiteralExpression }
        Token { kind: LiteralInteger }
      Finish
    Finish
    Start { kind: TermArgument }
      Start { kind: LiteralExpression }
        Token { kind: LiteralInteger }
      Finish
    Finish
  Finish
Finish

