crates/parsing/tests/snapshots/grammar_tests__variable-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: f
Start { kind: VariableBinder }
  Start { kind: Name }
    Token { kind: Lower }
  Finish
Finish

