crates/parsing/tests/snapshots/grammar_tests__wildcard-binder.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: _
Start { kind: WildcardBinder }
  Token { kind: Underscore }
Finish

